Set up express+primus server

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Multiplayer Game of Life</title>
     <link rel="stylesheet" href="css/main.css">
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" lazyload>-->
 </head>
 <body>
     <div id="container">
         <h1 id="heading">Multiplayer Game of Life</h1>
         <canvas id="canvas" width=901 height=601></canvas>
     </div>
-    <script src="js/main.js"></script>
+    <script src="js/primus.js"></script>
+    <script src="js/game-of-life.js"></script>
 </body>
 </html>
