Use Primus-provided route for client library

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
         <h1 id="heading">Multiplayer Game of Life</h1>
         <canvas id="canvas" width=901 height=601></canvas>
     </div>
-    <script src="js/primus.js"></script>
+    <script src="/primus/primus.js"></script>
     <script src="js/game-of-life.js"></script>
 </body>
 </html>
