--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,7 +6,21 @@
     user-select: none;
 }
 
-#heading {
+body {
     color: #333333;
     font-family: 'Trebuchet MS', Helvetica, sans-serif;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    font-weight: 500;
+}
+
+#patterns {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.pattern-gif {
+    cursor: pointer;
 }
