Add online player count and prepare for submission

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
 <body>
     <div id="container">
         <h1 id="heading">Multiplayer Game of Life</h1>
+        <p>players online: <span id="players-online">0</span></p>
         <canvas id="canvas" width=901 height=601></canvas>
         <h3>Patterns<small> (click to draw them at a random location in the world)</small></h3>
         <div id="patterns">
