--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,6 +19,7 @@ h1,h2,h3,h4,h5,h6 {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    margin-bottom: 20px;
 }
 
 .pattern-gif {
