Add optimistic drawing and connection notifications

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Multiplayer Game of Life</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/notie/dist/notie.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -33,5 +34,6 @@
     </div>
     <script src="/primus/primus.js"></script>
     <script src="js/game-of-life.js"></script>
+    <script src="https://unpkg.com/notie"></script>
 </body>
 </html>
